--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,12 @@
-root =  = true
+root = true
 
 [*]
-indent_style = tab
+indent_style = space
 trim_trailing_whitespace = true
-indent_size = 4
+indent_size = 2
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
 
 [*.css]
 indent_style = tab
